--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ const asciiOutput = document.getElementById('asciiOutput');
 const sizeInput = document.getElementById('size');
 const colorCheckbox = document.getElementById('color');
 
-const asciiChars = "@%#*+=-:. "; // dark to light
+const asciiChars = " .:-=+*#%@"; // dark to light
 
 convertBtn.addEventListener('click', () => {
     if (!imageInput.files[0]) return alert("Please upload an image!");
