--- a/index.html
+++ b/index.html
@@ -3,25 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Image/Video to ASCII Converter</title>
+<title>Image/GIF/Video to ASCII Converter</title>
 <style>
     body {
         font-family: monospace;
         background-color: #111;
         color: #eee;
         text-align: center;
-        padding: 10px;
-        overflow: hidden;
+        padding: 20px;
     }
     #asciiOutput {
         white-space: pre;
-        text-align: left;
-        line-height: 7px;
-        font-size: 8px;
         display: inline-block;
-        max-width: 100vw;
-        max-height: 100vh;
-        overflow: hidden;
+        text-align: left;
+        line-height: 7px; /* adjust for vertical scaling */
+        font-size: 8px;
     }
     input, label {
         margin: 5px;
@@ -29,99 +25,38 @@
 </style>
 </head>
 <body>
-<h1>ASCII Converter (Images, Videos, GIFs)</h1>
-<input type="file" id="fileInput" accept="image/*,video/*"><br>
-<label for="size">Size (characters): </label>
+<h1>Image / GIF / Video to ASCII</h1>
+<input type="file" id="mediaInput" accept="image/*,video/*"><br>
+<label for="size">Width (characters): </label>
 <input type="number" id="size" value="100" min="10" max="500"><br>
 <label for="color">Color: </label>
 <input type="checkbox" id="color"><br>
 <button id="convertBtn">Convert</button>
+
 <pre id="asciiOutput"></pre>
 
 <script>
-const fileInput = document.getElementById('fileInput');
+const mediaInput = document.getElementById('mediaInput');
 const convertBtn = document.getElementById('convertBtn');
 const asciiOutput = document.getElementById('asciiOutput');
 const sizeInput = document.getElementById('size');
 const colorCheckbox = document.getElementById('color');
 
-// ASCII chars from dark to light, @ is lightest
-const asciiChars = " .:-=+*#%@";
+const asciiChars = " .:-=+*#%@"; // dark to light
+let playing = false;
 
-let video = null;
-let animationId = null;
-
-convertBtn.addEventListener('click', () => {
-    if (!fileInput.files[0]) return alert("Please upload a file!");
-    cancelAnimationFrame(animationId);
-
-    const file = fileInput.files[0];
-    const reader = new FileReader();
-
-    reader.onload = e => {
-        const url = e.target.result;
-        if(file.type.startsWith('image/')){
-            loadImage(url);
-        } else if(file.type.startsWith('video/')){
-            loadVideo(url);
-        } else {
-            alert("Unsupported file type!");
-        }
-    };
-    reader.readAsDataURL(file);
-});
-
-function loadImage(src){
-    const img = new Image();
-    img.onload = () => {
-        renderFrame(img);
-    };
-    img.src = src;
-}
-
-function loadVideo(src){
-    video = document.createElement('video');
-    video.src = src;
-    video.loop = true;
-    video.muted = true;
-    video.play();
-    video.addEventListener('play', () => {
-        renderVideoFrame();
-    });
-}
-
-function renderVideoFrame(){
-    if(video.paused || video.ended) return;
-    renderFrame(video);
-    animationId = requestAnimationFrame(renderVideoFrame);
-}
-
-function renderFrame(media){
-    const size = parseInt(sizeInput.value);
-    const aspect = media.height / media.width;
-
-    // Calculate size to fit screen
-    const maxWidth = window.innerWidth / 8; // approx char width
-    const maxHeight = window.innerHeight / 7; // approx char height
-    let width = Math.min(size, maxWidth);
-    let height = Math.min(Math.floor(width * aspect), maxHeight);
-
-    const canvas = document.createElement('canvas');
-    canvas.width = width;
-    canvas.height = height;
-    const ctx = canvas.getContext('2d');
-    ctx.drawImage(media, 0, 0, width, height);
-    const data = ctx.getImageData(0, 0, width, height).data;
-
+function frameToAscii(ctx, width, height){
+    const imageData = ctx.getImageData(0, 0, width, height).data;
     let asciiStr = '';
-    for(let y = 0; y < height; y++){
-        for(let x = 0; x < width; x++){
-            const i = (y*width + x)*4;
-            const r = data[i];
-            const g = data[i+1];
-            const b = data[i+2];
-            const brightness = 0.299*r + 0.587*g + 0.114*b;
-            const char = asciiChars[Math.floor((brightness/255)*(asciiChars.length-1))];
+    for (let y = 0; y < height; y++) {
+        for (let x = 0; x < width; x++) {
+            const i = (y * width + x) * 4;
+            const r = imageData[i];
+            const g = imageData[i + 1];
+            const b = imageData[i + 2];
+            const brightness = (0.299*r + 0.587*g + 0.114*b);
+            const char = asciiChars[Math.floor((brightness/255) * (asciiChars.length-1))];
+            
             if(colorCheckbox.checked){
                 asciiStr += `<span style="color: rgb(${r},${g},${b})">${char}</span>`;
             } else {
@@ -133,11 +68,49 @@ function renderFrame(media){
     asciiOutput.innerHTML = asciiStr;
 }
 
-// Resize text on window resize
-window.addEventListener('resize', () => {
-    if(video){
-        renderFrame(video);
+convertBtn.addEventListener('click', () => {
+    if (!mediaInput.files[0]) return alert("Please upload an image, GIF, or video!");
+    const file = mediaInput.files[0];
+    const url = URL.createObjectURL(file);
+
+    let media;
+    if (file.type.startsWith("video") || file.type.endsWith("gif")) {
+        media = document.createElement('video');
+        media.src = url;
+        media.loop = true;
+        media.muted = true;
+        media.play();
+    } else {
+        media = new Image();
+        media.src = url;
     }
+
+    media.onload = media.onloadeddata = () => {
+        const width = parseInt(sizeInput.value);
+        const scale = media.height / media.width;
+        const height = Math.floor(width * scale);
+
+        const canvas = document.createElement('canvas');
+        canvas.width = width;
+        canvas.height = height;
+        const ctx = canvas.getContext('2d');
+
+        if (media.tagName === "IMG") {
+            // Static image
+            ctx.drawImage(media, 0, 0, width, height);
+            frameToAscii(ctx, width, height);
+        } else {
+            // GIFs and Videos: animate
+            playing = true;
+            function renderFrame(){
+                if (!playing) return;
+                ctx.drawImage(media, 0, 0, width, height);
+                frameToAscii(ctx, width, height);
+                requestAnimationFrame(renderFrame);
+            }
+            renderFrame();
+        }
+    };
 });
 </script>
 </body>
