--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ convertBtn.addEventListener('click', () => {
                     asciiStr += char;
                 }
             }
-            asciiStr += '\n';
+            asciiStr += '<br>';
         }
         asciiOutput.innerHTML = asciiStr;
     };
