--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ function canvasToAsciiHTML(ctx, width, height){
         out += ch;
       }
     }
-    out += '\\n';
+    out += '<br>';
   }
   return out;
 }
