--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
   </div>
 
 <script>
-/* --- Settings & DOM --- */
-const asciiChars = " .:-=+*#%@"; // dark -> light
+const asciiChars = " .:-=+*#%@";
 const mediaInput = document.getElementById('mediaInput');
 const convertBtn  = document.getElementById('convertBtn');
 const asciiOutput  = document.getElementById('asciiOutput');
@@ -77,17 +76,15 @@ const pauseBtn = document.getElementById('pauseBtn');
 const resumeBtn = document.getElementById('resumeBtn');
 const speedInput = document.getElementById('speed');
 
-let frames = [];         // array of precomputed ASCII strings (HTML)
+let frames = [];
 let playingInterval = null;
 let playing = false;
 let paused = false;
 let frameIndex = 0;
 
-/* --- Utility helpers --- */
 function sleep(ms){ return new Promise(r => setTimeout(r, ms)); }
 function clamp(v, a, b){ return Math.max(a, Math.min(b, v)); }
 
-/* convert a canvas context into an ASCII HTML string */
 function canvasToAsciiHTML(ctx, width, height){
   const data = ctx.getImageData(0,0,width,height).data;
   let out = '';
@@ -109,13 +106,10 @@ function canvasToAsciiHTML(ctx, width, height){
   return out;
 }
 
-/* quick 32-bit FNV-1a-ish hash over RGB samples (used for GIF frame repeat detection) */
 function imageDataHash(sampleData){
-  // sampleData is Uint8ClampedArray
   let h = 2166136261 >>> 0;
-  const step = 4 * Math.max(1, Math.floor(sampleData.length / (4 * 2000))); // sample up to ~2000 pixels
+  const step = 4 * Math.max(1, Math.floor(sampleData.length / (4 * 2000)));
   for(let i=0;i<sampleData.length;i+=step){
-    // combine r,g,b
     let v = ((sampleData[i]<<16) | (sampleData[i+1]<<8) | (sampleData[i+2])) >>> 0;
     h ^= v;
     h = Math.imul(h, 16777619) >>> 0;
@@ -123,7 +117,6 @@ function imageDataHash(sampleData){
   return ('00000000' + h.toString(16)).slice(-8);
 }
 
-/* update progress UI */
 function setProgress(current, total, text){
   if(total>0){
     progressEl.max = total;
@@ -136,7 +129,6 @@ function setProgress(current, total, text){
   }
 }
 
-/* --- Playback controls --- */
 function startPlayback(){
   if(playingInterval) clearInterval(playingInterval);
   const intervalMs = clamp(parseInt(speedInput.value)||100, 10, 2000);
@@ -149,7 +141,6 @@ function startPlayback(){
     asciiOutput.textContent = 'No frames.';
     return;
   }
-  // fast immediate first frame
   asciiOutput.innerHTML = frames[0];
   frameIndex = 1 % frames.length;
   playingInterval = setInterval(()=>{
@@ -168,19 +159,12 @@ function stopPlayback(){
   resumeBtn.disabled = true;
 }
 
-/* --- Main conversion flows --- */
-
-/* Convert static image (or GIF first frame fallback) */
 async function convertStaticImage(file){
   const url = URL.createObjectURL(file);
   const img = new Image();
   img.crossOrigin = 'anonymous';
   img.src = url;
-  await new Promise((res,rej)=>{
-    img.onload = res;
-    img.onerror = () => rej(new Error('Image load failed'));
-  });
-
+  await new Promise((res,rej)=>{ img.onload = res; img.onerror = () => rej(new Error('Image load failed')); });
   const widthChars = clamp(parseInt(sizeInput.value)||120, 10, 800);
   const scale = img.height/img.width || 1;
   const heightChars = Math.max(2, Math.floor(widthChars * scale));
@@ -196,7 +180,6 @@ async function convertStaticImage(file){
   URL.revokeObjectURL(url);
 }
 
-/* Convert video by seeking to each timestamp (configurable fps) */
 async function convertVideo(file){
   const url = URL.createObjectURL(file);
   const video = document.createElement('video');
@@ -205,14 +188,7 @@ async function convertVideo(file){
   video.crossOrigin = 'anonymous';
   video.preload = 'auto';
   video.src = url;
-
-  await new Promise((res,rej)=>{
-    video.onloadedmetadata = () => {
-      // some browsers give 0 width/height until loaded sufficiently - guard by small delay
-      setTimeout(res, 0);
-    };
-    video.onerror = () => rej(new Error('Video failed to load metadata'));
-  });
+  await new Promise(res=>video.onloadedmetadata=res);
 
   const widthChars = clamp(parseInt(sizeInput.value)||120, 10, 800);
   const scale = (video.videoHeight || 360) / (video.videoWidth || 640);
@@ -230,46 +206,19 @@ async function convertVideo(file){
   frames = [];
   setProgress(0, estimatedFrames, 'Capturing video frames:');
 
-  // We'll step by time and use the 'seeked' event to draw the accurate frame
   const frameTimes = [];
-  for(let i=0;i<estimatedFrames;i++){
-    frameTimes.push(Math.min(i/captureFps, duration));
-  }
+  for(let i=0;i<estimatedFrames;i++) frameTimes.push(Math.min(i/captureFps, duration));
 
-  for(let i=0;i<frameTimes.length;i++){
-    const t = frameTimes[i];
-    // seek
-    await new Promise((res,rej) => {
-      const onseek = () => {
-        // draw frame
-        try{
-          ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-        }catch(e){
-          // some codecs might throw - fallback to clear and continue
-          ctx.clearRect(0,0,canvas.width,canvas.height);
-        }
-        // convert
-        const ascii = canvasToAsciiHTML(ctx, canvas.width, canvas.height);
-        frames.push(ascii);
-        setProgress(i+1, frameTimes.length, 'Capturing video frames:');
-        // small yield so UI can update
-        setTimeout(res, 0);
-      };
-      video.currentTime = Math.min(t, video.duration || t);
-      // some browsers fire 'seeked' immediately else after decode
+  const batchSize = 5;
+  for(let i=0;i<frameTimes.length;i+=batchSize){
+    const batch = frameTimes.slice(i, i+batchSize);
+    await Promise.all(batch.map(t=>new Promise(res=>{
+      const onseek = () => { try{ ctx.drawImage(video,0,0,canvas.width,canvas.height); }catch(e){} frames.push(canvasToAsciiHTML(ctx, canvas.width, canvas.height)); setProgress(frames.length, estimatedFrames, 'Capturing video frames:'); res(); };
+      video.currentTime = Math.min(t, video.duration);
       video.addEventListener('seeked', onseek, {once:true});
-      // safety timeout in case 'seeked' never fires (rare)
-      setTimeout(()=> {
-        // draw anyway
-        try{ ctx.drawImage(video,0,0,canvas.width,canvas.height);}catch(e){}
-        frames.push(canvasToAsciiHTML(ctx, canvas.width, canvas.height));
-        setProgress(i+1, frameTimes.length, 'Capturing video frames: (timeout)');
-        res();
-      }, 2000);
-    });
-    // yield between frames a little to keep UI fluid for long conversions
+      setTimeout(res, 2000);
+    })));
     await sleep(0);
-    // if user-specified maxFrames is hit, break
     if(frames.length >= maxFrames) break;
   }
 
@@ -278,17 +227,12 @@ async function convertVideo(file){
   startPlayback();
 }
 
-/* Convert GIF by sampling the animated <img> repeatedly and detecting loop via hashing */
 async function convertGIF(file){
   const url = URL.createObjectURL(file);
   const img = new Image();
   img.crossOrigin = 'anonymous';
   img.src = url;
-
-  await new Promise((res,rej)=>{
-    img.onload = res;
-    img.onerror = () => rej(new Error('GIF load failed'));
-  });
+  await new Promise((res,rej)=>{ img.onload=res; img.onerror=()=>rej(new Error('GIF load failed')); });
 
   const widthChars = clamp(parseInt(sizeInput.value)||120, 10, 800);
   const scale = img.height/img.width || 1;
@@ -306,47 +250,23 @@ async function convertGIF(file){
   let firstHash = null;
   let captureCount = 0;
 
-  // We'll poll via requestAnimationFrame while the GIF animates in the Image element.
-  await new Promise((resolve)=>{
+  const batchSize = 3; // process a few frames per animation frame
+  await new Promise(resolve=>{
     let stop = false;
     function capture(){
       if(stop) return resolve();
-      try{
-        ctx.drawImage(img,0,0,canvas.width,canvas.height);
-      }catch(e){ /* ignore */ }
-      const data = ctx.getImageData(0,0,canvas.width,canvas.height).data;
-      const h = imageDataHash(data);
-
-      // If it's the first frame, store its hash
-      if(firstHash === null) firstHash = h;
-
-      // If we've seen this hash before and it's the same as the first frame,
-      // and we've captured at least 2 frames, assume the GIF looped.
-      if(h === firstHash && captureCount > 0){
-        // to avoid stopping immediately on first repetition of two-frame gifs,
-        // ensure at least 2 cycles or haven't just captured the same frame twice in a row.
-        if(seen.has(h) && seen.get(h) !== captureCount - 1){
-          stop = true;
-          setProgress(captureCount, maxFrames, 'GIF capture: loop detected.');
-          return resolve();
-        }
+      for(let b=0;b<batchSize;b++){
+        try{ ctx.drawImage(img,0,0,canvas.width,canvas.height); }catch(e){}
+        const data = ctx.getImageData(0,0,canvas.width,canvas.height).data;
+        const h = imageDataHash(data);
+        if(firstHash===null) firstHash=h;
+        if(h===firstHash && captureCount>0 && seen.has(h) && seen.get(h)!==captureCount-1){ stop=true; setProgress(captureCount,maxFrames,'GIF capture: loop detected.'); return resolve(); }
+        frames.push(canvasToAsciiHTML(ctx, canvas.width, canvas.height));
+        seen.set(h,captureCount);
+        captureCount++;
+        setProgress(captureCount,maxFrames,'Sampling GIF frames:');
+        if(captureCount>=maxFrames){ stop=true; return resolve(); }
       }
-
-      // If not a duplicate of the very last captured frame, push it
-      const lastHash = frames.length ? frames[frames.length-1].slice(0,8) : null;
-      // convert now and store full HTML string
-      const ascii = canvasToAsciiHTML(ctx, canvas.width, canvas.height);
-      // store a tiny prefix of ascii to compare quickly? we store hash separately:
-      frames.push(ascii);
-      seen.set(h, captureCount);
-      captureCount++;
-      setProgress(captureCount, maxFrames, 'Sampling GIF frames:');
-
-      if(captureCount >= maxFrames){
-        stop = true;
-        return resolve();
-      }
-      // schedule next capture on the next frame
       requestAnimationFrame(capture);
     }
     requestAnimationFrame(capture);
@@ -357,12 +277,10 @@ async function convertGIF(file){
   startPlayback();
 }
 
-/* --- Top-level convert switch --- */
-convertBtn.addEventListener('click', async (ev) => {
+convertBtn.addEventListener('click', async ev=>{
   ev.preventDefault();
   if(!mediaInput.files[0]) { alert('Please select a file (image, GIF, or video).'); return; }
 
-  // disable UI while converting
   convertBtn.disabled = true;
   pauseBtn.disabled = true;
   resumeBtn.disabled = true;
@@ -371,53 +289,26 @@ convertBtn.addEventListener('click', async (ev) => {
   asciiOutput.textContent = '';
   progressText.textContent = 'Starting...';
   infoEl.textContent = 'Converting...';
+
   try{
     const file = mediaInput.files[0];
-    // handle types:
-    if(file.type.startsWith('video/')){
-      await convertVideo(file);
-    } else if(file.type === 'image/gif' || file.name.toLowerCase().endsWith('.gif')){
-      await convertGIF(file);
-    } else if(file.type && file.type.startsWith('image/')){
-      await convertStaticImage(file);
-    } else {
-      // fallback: try image route first
-      await convertStaticImage(file);
-    }
+    if(file.type.startsWith('video/')) await convertVideo(file);
+    else if(file.type==='image/gif' || file.name.toLowerCase().endsWith('.gif')) await convertGIF(file);
+    else await convertStaticImage(file);
   }catch(err){
     console.error(err);
-    progressText.textContent = 'Error: ' + (err && err.message ? err.message : String(err));
+    progressText.textContent = 'Error: '+(err?.message||String(err));
     infoEl.textContent = 'Conversion failed.';
-  } finally {
-    convertBtn.disabled = false;
+  }finally{
+    convertBtn.disabled=false;
   }
 });
 
-/* Pause/Resume hooks (during playback) */
-pauseBtn.addEventListener('click', () => {
-  paused = true;
-  infoEl.textContent = 'Paused.';
-});
-
-resumeBtn.addEventListener('click', () => {
-  paused = false;
-  infoEl.textContent = 'Playing.';
-});
-
-/* Changing the speed should restart the playback with the new interval */
-speedInput.addEventListener('change', () => {
-  if(playing) startPlayback();
-});
-
-/* Keep UI tidy if user changes options while playing */
-sizeInput.addEventListener('change', () => {
-  // user should convert again to reflect size change
-  infoEl.textContent = 'Size changed — please convert again.';
-});
-
-/* Safety: if the user navigates away, stop intervals */
-window.addEventListener('beforeunload', () => stopPlayback());
-
+pauseBtn.addEventListener('click',()=>{ paused=true; infoEl.textContent='Paused.'; });
+resumeBtn.addEventListener('click',()=>{ paused=false; infoEl.textContent='Playing.'; });
+speedInput.addEventListener('change',()=>{ if(playing) startPlayback(); });
+sizeInput.addEventListener('change',()=>{ infoEl.textContent='Size changed — please convert again.'; });
+window.addEventListener('beforeunload',()=>stopPlayback());
 </script>
 </body>
 </html>
