--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Image to ASCII Converter</title>
-<link rel="icon" type="image/png" href="favicon.png">
+<link rel="icon" type="image/png" href="IMG_0185"> <!--for some reason github wouldnt let me rename it /:-->
 <style>
     body {
         font-family: monospace;
